Add heroku plugin